# genetic-prevalence-estimator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tool-versions  Administration.md  CONTRIBUTING.md  LICENSE  README.md  compose.yml  dev-requirements.in  dev-requirements.txt  dev.sh  docker-compose.dev.yml  docker-compose.yml  noxfile.py  pyproject.toml  shared-requirements.in  shared-requirements.txt
.cloudbuild/: build-and-deploy-app.yaml  build-app.yaml  import-clinvar.yaml  import-gnomad-v2p1p1.yaml  import-gnomad-v3p1p2.yaml  import-gnomad-v4p1p0.yaml  import-gnomad-v4p1p1.yaml  import-lof-curations.yaml  migrate-database.yaml
.github/workflows/: backend-ci.yml  browser-ci.yml  frontend-ci.yml  pipeline-ci.yml  website-ci.yml
calculator/: pyproject.toml  setup.py
calculator/src/calculator/: constants.py  middleware.py  models.py  serializers.py
calculator/src/calculator/migrations/: 0001_initial.py  0002_variantlistannotation.py  0003_publicvariantlist.py  0003_variantlistpublicstatus.py  0004_alter_variantlistannotation_user.py  0004_variantlistsharedannotation.py  0005_dashboardlist.py  0006_variantlistannotation_variant_calculations.py  0007_rename_publicstatus_to_representativestatus.py  0008_alter_dashboardlist.py  0009_dashboardlist_inheritance_type.py  0010_variantlist_structural_variants.py  0011_variantlist_supporting_document.py  0012_variantlistannotation_include_homozygotes_in_calculations.py  0013_variantlist_support_documents.py  0014_add_not_included_variants.py  0014_variantlistannotation_tagged_groups.py  0015_variantlistannotation_tagged_groups.py  0016_dominant_dashboard_list.py
calculator/src/calculator/serializers/: __init__.py  dashboard_list_serializer.py  dominant_dashboard_list_serializer.py  prevalence_list_serializer.py  public_variant_list_serializer.py  public_variant_lists_serializer.py  serializer.py  serializer_fields.py  (+4 more)
calculator/tests/: test_models.py  test_serializers.py
calculator/tests/serializers/: test_public_variant_list_serializer.py  test_variant_list_access_permission_serializer.py  test_variant_list_annotation_serializer.py  test_variant_list_serializer.py
data-pipelines/: README.md  combine_dashboard_downloads.py  generate_dashboard_lists.py  generate_dominant_dashboard_lists.py  generate_recessive_dashboard_lists.py  import_clinvar.py  import_lof_curation_results.py  prepare_gene_variant_lists.py  prepare_gnomad_structural_variants.py  prepare_gnomad_svs.py  prepare_gnomad_variants.py  prepare_transcript_variant_lists.py  prepare_variant_lists.py  pyproject.toml  requirements-pipeline.in  requirements-pipeline.txt  scrape_orphanet_prevalences.py  test_pipeline_calculations.py
data-pipelines/tests/: calculationsData.json
frontend/: .gitignore  babel.config.js  frontend-dev.dockerfile  frontend-dev.dockerfile.dockerignore  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/public/: dashboard-summary.csv  index.html  robots.txt
frontend/src/: App.tsx  CancelablePromise.ts  api.ts  auth.ts  errors.ts  setupProxy.js  state.ts  style.css  theme.ts  types.ts
frontend/src/components/: AboutPage.spec.tsx  AboutPage.tsx  AllVariantListsSummaryPage.tsx  ButtonWithConfirmation.tsx  Combobox.tsx  CreateVariantListPage.tsx  CustomVariantListForm.tsx  DateTime.tsx  DescriptionList.tsx  DocumentTitle.tsx  EditVariantListPage.tsx  FAQPage.spec.tsx  FAQPage.tsx  GnomadVariantListForm.tsx  HelpTextHover.tsx  HomePage.spec.tsx  HomePage.tsx  Link.tsx  MultipleSelect.tsx  PageNotFoundPage.spec.tsx  PageNotFoundPage.tsx  PublicListPage.tsx  PublicListsPage.tsx  PublicVariantListsPage.spec.tsx  PublicVariantListsPage.tsx  SignInButton.tsx  VariantListPage.tsx  VariantListsPage.tsx  VariantsInput.tsx  identifiers.ts  media.tsx
frontend/src/constants/: clinvar.ts  config.ts  populations.ts  vepConsequences.ts
frontend/tests/__factories__/: VariantList.tsx
frontend/tests/__helpers__/: router.tsx
pubsub/: pubsub.dockerfile  pubsub.dockerfile.dockerignore  setup_subscription.py
scripts/: GIDNV.py  pip-compile.sh  prepare_test_data.sh
terraform/: .gitignore  .terraform.lock.hcl  README.md  apis.tf  build-app.tf  build-common.tf  build-data-pipelines.tf  build-migrate.tf  build.tf  data-pipelines.tf  database.tf  main.tf  network.tf  pubsub.tf  run-website.tf  run-worker.tf  secrets.tf  variables.tf
website/: pyproject.toml  setup.py  website-requirements.in  website-requirements.txt  website.dockerfile  website.dockerfile.dockerignore
website/src/website/: middleware.py  permissions.py  pubsub.py  urls.py  wsgi.py
website/src/website/scripts/: merge_duplicate_users.py
website/src/website/serializers/: __init__.py  user_serializer.py
website/src/website/settings/: base.py  development.py
website/src/website/views/: app_config.py  auth.py  dashboard_list_views.py  dominant_dashboard_list_views.py  error_views.py  frontend.py  prevalence_list_views.py  public_variant_list_views.py  public_variant_lists_views.py  system_status_views.py  user_views.py  variant_list_access_views.py  variant_list_views.py  variant_lists.py
website/tests/: conftest.py  test_variant_list_access_views.py  test_variant_list_views.py
website/tests/serializers/: test_user_serializer.py
website/tests/views/: mock_dashboard_model.py  test_auth_views.py  test_dashboard_list_views.py  test_public_variant_list_views.py  test_system_status_views.py  test_user_views.py  test_variant_list_access_views.py  test_variant_list_views.py
worker/: pyproject.toml  setup.py  worker-requirements.in  worker-requirements.txt  worker.dockerfile  worker.dockerfile.dockerignore
worker/src/worker/: apps.py  path_to_clinvar_table.txt  tasks.py  urls.py  views.py  write_to_file.yaml  wsgi.py
worker/src/worker/settings/: base.py  development.py  production.py
worker/tests/: test_process_variant_list.py  test_receive_message_view.py
(+62 files in other folders)
