[project]
name = "genetic-prevalence-estimator"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[tool.black]
target-version = ['py39']
extend-exclude = '''
.*/migrations/.*
'''

[tool.uv.workspace]
members = [
    "website",
    "worker",
    "project-calculator",
    "data-pipelines",
    "calculator",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.settings.test"
django_find_project = false
pythonpath = [
  "website/src",
  "calculator/src"
]
filterwarnings = [
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function MethodDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:Call to deprecated create function ServiceDescriptor",
]

[dependency-groups]
dev = [
    "argcomplete==3.6.3",
    "astroid==4.0.4",
    "attrs==26.1.0",
    "black==23.12.1",
    "build==1.5.0",
    "cfgv==3.5.0",
    "click==8.4.1",
    "colorlog==6.10.1",
    "coverage==7.14.1",
    "dependency-groups==1.3.1",
    "dill==0.4.1",
    "distlib==0.4.1",
    "filelock==3.29.0",
    "humanize==4.15.0",
    "identify==2.6.19",
    "iniconfig==2.3.0",
    "isort==8.0.1",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "nox==2026.4.10",
    "packaging==26.2",
    "pathspec==1.1.1",
    "pip==26.1.2",
    "pip-tools==7.5.3",
    "platformdirs==4.10.0",
    "pluggy==1.6.0",
    "pre-commit==4.6.0",
    "pygments==2.20.0",
    "pylint==4.0.5",
    "pylint-django==2.7.0",
    "pylint-plugin-utils==0.9.0",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "python-discovery==1.4.0",
    "pyyaml==6.0.3",
    "setuptools==81.0.0",
    "tomlkit==0.15.0",
    "virtualenv==21.4.2",
    "wheel==0.47.0",
]
