[project]
name = "worker"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "aiodns==2.0.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.0",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "avro==1.11.5",
    "azure-common==1.1.28",
    "azure-core==1.41.0",
    "azure-identity==1.25.3",
    "azure-mgmt-core==1.6.0",
    "azure-mgmt-storage==20.1.0",
    "azure-storage-blob==12.29.0",
    "bokeh==3.4.3",
    "boto3==1.43.19",
    "botocore==1.43.19",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "commonmark==0.9.2",
    "contourpy==1.3.3",
    "cryptography==48.0.0",
    "decorator==4.4.2",
    "deprecated==1.2.18",
    "dill==0.4.1",
    "django==4.2.30",
    "djangorestframework==3.14.0",
    "frozenlist==1.8.0",
    "google-auth==2.53.0",
    "google-auth-oauthlib==0.8.0",
    "gunicorn>=26.0.0",
    "hail==0.2.138",
    "humanize==4.15.0",
    "idna==3.17",
    "isodate==0.7.2",
    "janus==1.0.0",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "jproperties==2.1.2",
    "markupsafe==3.0.3",
    "msal==1.37.0",
    "msal-extensions==1.3.1",
    "msrest==0.7.1",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.6",
    "oauthlib==3.3.1",
    "orjson==3.11.9",
    "packaging==26.2",
    "pandas==2.3.3",
    "parsimonious==0.11.0",
    "pillow==12.2.0",
    "plotly==5.24.1",
    "project-calculator",
    "propcache==0.5.2",
    "psycopg2-binary>=2.9.12",
    "py4j==0.10.9.9",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycares==5.0.1",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pyspark==3.5.8",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "pytz==2021.1",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "rich==12.6.0",
    "rules==3.0",
    "s3transfer==0.18.0",
    "scipy==1.17.1",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "sqlparse==0.4.1",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "tornado==6.5.6",
    "typer==0.24.2",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uvloop==0.21.0",
    "wrapt==1.17.3",
    "xyzservices==2026.3.0",
    "yarl==1.24.2",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
project-calculator = { workspace = true }
